# KSolve

./: .gitignore  1.7.a.out  64586.out  7.17.20.txt  ACKOWLEDGEMENTS.md  AvailableMovesTester.cpp  BUILDING.md  CMakeLists.txt  FilteredAvailableMoves.hpp  Game.cpp  Game.hpp  GameStateMemory.cpp  GameStateMemory.hpp  HOW_IT_WORKS.md  KSOLVE.md  KSolve.cpp  KSolve.hpp  KSolve.natvis  KSolve2Solvitaire  KSolve2Solvitaire.cpp  KSolveAStar.cpp  KSolveAStar.hpp  KSolveDepth1st.cpp  KSolveDepth1st.hpp  KSolveRBFS.cpp  KSolveRBFS.hpp  KSolveResult.hpp  KSolver.cpp  KlondikeSolver.cpp  LICENSE  MoveStorage.cpp  MoveStorage.hpp  Mutexes.hpp  README.md  STATISTICS.md  SampleDeals.txt  SelfCount.hpp  ShareableIndexedPriorityQueue.hpp  SolutionStore.hpp  TestAvailMoves.cpp  (+45 more)
frystl/: mf_vector.hpp  static_deque.hpp  static_vector.hpp
lib/: KSolveAStar.hpp
parallel_hashmap/: phmap.h
problems/: 2023.03.04^109  2023.03.10  2023.03.14  2023.03.17  2023.03.19^89  2023.03.24^130  2023.03.26  2023.03.27  2023.03.28  2023.03.29  2023.03.30  2023.03.31  2023.04.03^129  2023.04.06  2023.04.10  2023.04.11  2023.04.12^103  2023.04.13  2023.04.14  2023.04.15  2023.04.16  2023.04.17  2023.04.18-top  2023.04.19  2023.04.20-top  2023.04.21-top  2023.04.22  2023.04.23  2023.04.24  2023.04.25  2023.04.26  2023.04.27  2023.04.27-top  2023.04.28-top  2023.04.29  2023.04.30^103  2023.05.01  2023.05.02  2023.05.03  2023.05.04-top  (+55 more)
statistics/: .gitignore  Examine Fringe Changes.sps  MemoryNeeded.sh  MemoryNeeded.sps  SaveBase.sps  SourceLine.sps  StackCompare.sps  Stats101.ipynb  base10000.sav  (+15 more)
(+63 files in other folders)
